geo-aeo-17: add snapshot import rollback
